[project]
name = "ai-engineer-sdd-test"
version = "0.1.0"
description = "AI Engineer Challenge: The Intelligent Scheduler"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "chainlit>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "boto3>=1.40.0",
    # Exemplo de agente em `agent.py` usa LangGraph + langchain-aws.
    # Sinta-se à vontade para substituir por outro framework — basta editar
    # `agent.py` e remover/trocar estas deps.
    "langgraph>=0.6.0",
    "langchain-aws>=0.2.20",
    "langchain-core>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
